Fixed dark mode support.

--- a/Dice-Snippets/snippets/StarWarsDice/StarWarsDice.css
+++ b/Dice-Snippets/snippets/StarWarsDice/StarWarsDice.css
@@ -1,9 +1,9 @@
 /* Error: Undefined variable.
  *   ,
- * 4 |     @each $dors in variables.$diceandsymbols {
+ * 6 |     @each $dors in variables.$diceandsymbols {
  *   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^
  *   '
- *   src/scss/_formatting.scss 4:20  formatting()
+ *   src/scss/_formatting.scss 6:20  formatting()
  *   src/scss/starwars.scss 7:1      root stylesheet */
 
 body::before {
@@ -14,5 +14,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a   \2577 \a 4 \2502      @each $dors in variables.$diceandsymbols {\a   \2502                     ^^^^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   src/scss/_formatting.scss 4:20  formatting()\a   src/scss/starwars.scss 7:1      root stylesheet";
+  content: "Error: Undefined variable.\a   \2577 \a 6 \2502      @each $dors in variables.$diceandsymbols {\a   \2502                     ^^^^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   src/scss/_formatting.scss 6:20  formatting()\a   src/scss/starwars.scss 7:1      root stylesheet";
 }
